--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@radix-ui/react-icons": "^1.3.0",
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.11.10",
     "lucide-react": "^0.454.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
